[package]
name = "doodic"
version = "1.0.0"
authors = ["KislBall"]
edition = "2018"
description = "Speedy protocol for IPC based on QUIC."
repository = "https://github.com/Discordoo/doodic"
readme = "README.md"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.63"
console_error_panic_hook = { version = "0.1.6" }
anyhow = "1.0.56"
ring = "0.16.20"
quiche = "0.12.0"

[dev-dependencies]
wasm-bindgen-test = "0.3.13"